--- a/lib/dune
+++ b/lib/dune
@@ -1,7 +1,7 @@
 (library
- (name ezfifos)
- (public_name ezfifos)
- (modules ezfifos)
+ (name ezfifos_lwt)
+ (public_name ezfifos-lwt)
+ (modules ezfifos_lwt)
  (libraries lwt.unix lwt fileutils)
  (preprocess
   (pps lwt_ppx)))
