--- a/ezfifos-lwt.opam
+++ b/ezfifos-lwt.opam
@@ -11,6 +11,7 @@ bug-reports: "https://github.com/aeghost/ezfifos-lwt/issues"
 depends: [
   "dune" {>= "2.8"}
   "lwt" {>= "4.0.0"}
+  "lwt_ppx" {>= "2.0.0"}
   "fileutils" {>= "0.6.0"}
   "odoc" {with-doc}
 ]
