feature: add server feature
- Change API, Listen is now a proper server
- Read_once is introduce to read FIFO content ONCE
- Background_read is the old listen fun, and is advertised as it should be.

- Add server and read_once to the démo.

- Bump to 0.2.0

--- a/bin/dune
+++ b/bin/dune
@@ -1,5 +1,5 @@
 (executable
  (name demo)
- (libraries ezfifos-lwt lwt.unix)
+ (libraries ezfifos-lwt str lwt.unix)
  (preprocess
   (pps lwt_ppx)))
