--- a/lib/dune
+++ b/lib/dune
@@ -2,6 +2,6 @@
  (name ezfifos_lwt)
  (public_name ezfifos-lwt)
  (modules ezfifos_lwt)
- (libraries fmt lwt.unix lwt fileutils)
+ (libraries lwt.unix lwt fileutils)
  (preprocess
   (pps lwt_ppx)))
